Added session to documentation

--- a/flask_app/application/api/specification.yml
+++ b/flask_app/application/api/specification.yml
@@ -743,6 +743,8 @@ definitions:
           $ref: "#/definitions/LeagueStandings"
       season:
         type: "integer"
+      session:
+        type: "integer"
   LeagueStandings:
     properties:
       standings:
